Release 3.0.1 - Jacoco Report Aggregator
* tankIcon for tools
* async clients for metrics
* remove empty module
* reduce dependency
* Fix ArrayOutOfBoundsException
* Use InBuilt HttpServer
* async httpclient5
* jacoco-report-aggregator